--- a/Chat/app/src/main/res/layout/fragment_dashboard.xml
+++ b/Chat/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent">
 
     <TextView
-            android:id="@+id/dashboardText"
+            android:id="@+id/dashboard_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -19,10 +19,10 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
-            android:id="@+id/getVersionButton"
+            android:id="@+id/version_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/dashboardText"
+            app:layout_constraintTop_toBottomOf="@id/dashboard_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="send"/>
